# basic-ffmpeg

./: CMakeLists.txt  README.md  ctffmpeg.h  ctffmpeg.hpp  ctfolder.h  ctfolder.hpp  ffmpeg.cpp  main.cpp
